// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTimeView should render 1`] = `
<ViewLayout
  bodyElement={
    <div
      className="theme-body"
    >
      <div
        className="theme-date"
      >
        <CalendarGesture(DatePicker)
          allowFocus={true}
          calendar={
            Object {
              "monthIndex": 5,
              "year": 2006,
            }
          }
          goToNextMonth={[Function]}
          goToPreviousMonth={[Function]}
          onSelect={[Function]}
          selectedDate={undefined}
        />
      </div>
      <div
        className="theme-time"
      >
        <TimePicker
          allowFocus={true}
          onChange={[Function]}
          useSeconds={undefined}
          value={
            Object {
              "hours": "15",
              "minutes": "45",
            }
          }
        />
      </div>
    </div>
  }
  header={
    Object {
      "leftElement": <Action
        aria-label="Go to previous month"
        icon="talend-chevron-left"
        label=""
        link={true}
        onClick={[Function]}
        tabIndex="-1"
    />,
      "middleElement": <HeaderTitle
        button={
            Object {
                "aria-label": "Switch to month and year pickers view",
                "onClick": [Function],
                "tabIndex": 0,
              }
        }
        monthIndex={5}
        year={2006}
    />,
      "rightElement": <Action
        aria-label="Go to next month"
        icon="talend-chevron-left"
        iconTransform="rotate-180"
        label=""
        link={true}
        onClick={[Function]}
        tabIndex="-1"
    />,
    }
  }
/>
`;

exports[`DateTimeView should render without timePicker 1`] = `
<ViewLayout
  bodyElement={
    <div
      className="theme-body"
    >
      <div
        className="theme-date"
      >
        <CalendarGesture(DatePicker)
          allowFocus={true}
          calendar={
            Object {
              "monthIndex": 5,
              "year": 2006,
            }
          }
          goToNextMonth={[Function]}
          goToPreviousMonth={[Function]}
          onSelect={[Function]}
          selectedDate={undefined}
        />
      </div>
    </div>
  }
  header={
    Object {
      "leftElement": <Action
        aria-label="Go to previous month"
        icon="talend-chevron-left"
        label=""
        link={true}
        onClick={[Function]}
        tabIndex="-1"
    />,
      "middleElement": <HeaderTitle
        button={
            Object {
                "aria-label": "Switch to month and year pickers view",
                "onClick": [Function],
                "tabIndex": 0,
              }
        }
        monthIndex={5}
        year={2006}
    />,
      "rightElement": <Action
        aria-label="Go to next month"
        icon="talend-chevron-left"
        iconTransform="rotate-180"
        label=""
        link={true}
        onClick={[Function]}
        tabIndex="-1"
    />,
    }
  }
/>
`;
